# lib/db/src/schema/index.ts
@@ -3,3 +3,4 @@ export * from "./donations";
 export * from "./help_requests";
 export * from "./documents";
 export * from "./disaster_relief";
+export * from "./community_alerts";
